Istio-Playground/GKE/fault-injection/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
  - reviews # Very important!!!! Don't miss it!!!
  http:
  - match:
    - headers:
        x-user:
          exact: mauri      
    route:
    - destination:
        host: reviews
        subset: v3
  # - fault:
  #     delay:
  #       fixedDelay: 7s
  #       percentage:
  #         value: 90
  #   match:
  #   route:
  #   - destination:
  #       host: reviews
  #       subset: v2
  - route:
    - destination:
        host: reviews
        subset: v2
